# geoclue

./: Makefile.am  autogen.sh  configure.ac  geoclue.pc.in
docs/: Makefile.am
docs/reference/: Makefile.am  geoclue-docs.sgml  geoclue.types  implementing-providers.xml  using-geoclue.xml
docs/tools/: Makefile.am  spec-strip-docs.xsl  spec-to-docbook.xsl
example/: Makefile.am  address-example.c  common-example.c  geocode-example.c  master-example.c  master-pos-example.c  position-async-example.c  position-example.c  revgeocode-example.c
geoclue/: Makefile.am  gc-iface-address.c  gc-iface-address.h  gc-iface-geoclue.c  gc-iface-geoclue.h  gc-iface-geocode.c  gc-iface-geocode.h  gc-iface-position.c  gc-iface-position.h  gc-iface-reverse-geocode.c  gc-iface-reverse-geocode.h  gc-iface-velocity.c  gc-iface-velocity.h  gc-provider.c  gc-provider.h  gc-web-service.c  gc-web-service.h  geoclue-accuracy.c  geoclue-accuracy.h  geoclue-address-details.c  geoclue-address-details.h  geoclue-address.c  geoclue-address.h  geoclue-error.c  geoclue-error.h  geoclue-geocode.c  geoclue-geocode.h  geoclue-marshal.list  geoclue-master-client.c  geoclue-master-client.h  geoclue-master.c  geoclue-master.h  geoclue-position.c  geoclue-position.h  geoclue-provider.c  geoclue-provider.h  geoclue-reverse-geocode.c  geoclue-reverse-geocode.h  geoclue-types.c  geoclue-types.h  (+2 more)
interfaces/: Makefile.am  gc-iface-address-full.xml  gc-iface-geoclue-full.xml  gc-iface-geocode-full.xml  gc-iface-master-client-full.xml  gc-iface-master-full.xml  gc-iface-position-full.xml  gc-iface-reverse-geocode-full.xml  gc-iface-velocity-full.xml
providers/: Makefile.am
providers/example/: Makefile.am  geoclue-example.c  geoclue-example.provider  org.freedesktop.Geoclue.Providers.Example.service.in
providers/geonames/: Makefile.am  geoclue-geonames.c  geoclue-geonames.h  org.freedesktop.Geoclue.Providers.Geonames.service.in
providers/gpsd/: Makefile.am  geoclue-gpsd.c  geoclue-gpsd.provider  org.freedesktop.Geoclue.Providers.Gpsd.service.in
providers/gsmloc/: Makefile.am  geoclue-gsmloc-mm.c  geoclue-gsmloc-mm.h  geoclue-gsmloc-ofono.c  geoclue-gsmloc-ofono.h  geoclue-gsmloc.c  mcc.h  mm-marshal.list  ofono-manager.xml  ofono-marshal.list  ofono-modem.xml  ofono-network-operator.xml  ofono-network-registration.xml  org.freedesktop.Geoclue.Providers.Gsmloc.service.in
providers/gypsy/: Makefile.am  geoclue-gypsy.c  org.freedesktop.Geoclue.Providers.Gypsy.service.in
providers/hostip/: Makefile.am  geoclue-hostip.c  geoclue-hostip.h  org.freedesktop.Geoclue.Providers.Hostip.service.in
providers/localnet/: Makefile.am  geoclue-localnet.c  geoclue-localnet.xml  org.freedesktop.Geoclue.Providers.Localnet.service.in
providers/manual/: Makefile.am  geoclue-manual.c  geoclue-manual.xml  org.freedesktop.Geoclue.Providers.Manual.service.in
providers/nominatim/: Makefile.am  geoclue-nominatim.c  geoclue-nominatim.h  org.freedesktop.Geoclue.Providers.Nominatim.service.in
providers/plazes/: Makefile.am  geoclue-plazes.c  org.freedesktop.Geoclue.Providers.Plazes.service.in
providers/skyhook/: Makefile.am  geoclue-skyhook.c  geoclue-skyhook.provider  org.freedesktop.Geoclue.Providers.Skyhook.service.in
providers/yahoo/: Makefile.am  geoclue-yahoo.c  org.freedesktop.Geoclue.Providers.Yahoo.service.in
src/: Makefile.am  client.c  client.h  connectivity-conic.c  connectivity-conic.h  connectivity-connman.c  connectivity-connman.h  connectivity-networkmanager.c  connectivity-networkmanager.h  connectivity.c  connectivity.h  geoclue  main.c  main.h  master-provider.c  master-provider.h  master.c  master.h  org.freedesktop.Geoclue.Master.service.in  org.freedesktop.Geoclue.gschema.xml  test-connectivity.c
test/: Makefile.am  geoclue-test-gui.c
